Created module project .. maven build ... tests.
Removed lombok
Pair refactored